fix: [PL-43993]: New lefthand nav tooltips pop up behind pipeline execution details panel (#19806)

--- a/src/modules/10-common/navigation/SideNavV2/SideNavLink/SideNavLink.module.scss
+++ b/src/modules/10-common/navigation/SideNavV2/SideNavLink/SideNavLink.module.scss
@@ -1,3 +1,10 @@
+/*
+ * Copyright 2024 Harness Inc. All rights reserved.
+ * Use of this source code is governed by the PolyForm Shield 1.0.0 license
+ * that can be found in the licenses directory at the root of this repository, also available at
+ * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
+ */
+
 .link {
   display: flex;
   padding: var(--spacing-small) var(--spacing-medium) !important;
@@ -79,7 +86,8 @@
 }
 
 .popover {
-  transform: translate3d(10px, 0px, 0px) !important;
+  position: relative;
+  left: 10px;
   max-width: 200px;
   padding: var(--spacing-small);
 }
